# DisplayRefreshRateController

./: .gitignore  .gitmodules  README.md  generate.bat  update.bat
.github/workflows/: build.yml  update-submodules.yml
src/: AppContext.h  CMakeLists.txt  D3DManager.cpp  D3DManager.h  DisplayRefreshRateController.cpp  DisplayRefreshRateController.h  IDisplayController.h  main.cpp
src/DisplayRefreshRateController/: DisplayControllerInterface.h  DisplayRefreshRateController.aps  DisplayRefreshRateController.cpp  DisplayRefreshRateController.h  DisplayRefreshRateController.rc  DisplayRefreshRateController.sln  DisplayRefreshRateController.vcxproj  DisplayRefreshRateController.vcxproj.filters  DisplayRefreshRateControllerDlg.cpp  DisplayRefreshRateControllerDlg.h  resource.h
src/DisplayRefreshRateController/Intel/: IntelDisplayControllerAdapter.cpp  IntelDisplayControllerAdapter.h  cApiWrapper.cpp
src/DisplayRefreshRateController/res/: DisplayRefreshRateController.rc2
src/Intel/: IntelDisplayController.cpp  IntelDisplayController.h  IntelDisplayControllerAdapter.cpp
